--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "5m-trees-ds-dvis-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ibrahim-altufayli.github.io/DVIS-5M-TREES-DS-React",
   "dependencies": {
     "@coreui/coreui": "^5.0.0-beta.1",
     "@coreui/react": "^5.0.0-beta.1",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
